<resources>
    <string name="app_name">CashFlow</string>
    <string name="action_savenote">Save</string>
    <string name="action_edit">Editar Nota</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Exportar BD</string>
    <string name="action_about">Acerca de</string>
    <string name="action_exit">Salir</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_version">Version 1.15 Beta</string>
    <string name="freeware_license">Freeware License 2017</string>
    <string name="footer_text"># Elementos</string>
    <string name="title_activity_about2">AboutActivity2</string>
    <string name="empty_list">[ No exiten elementos a mostrar ]</string>
    <array name="empty">
        <item> </item>
        <item> </item>
        <item>[ No exiten elementos a mostrar ]</item>
    </array>
</resources>
